--- a/Frontend/barkod-sepetim-ui/package.json
+++ b/Frontend/barkod-sepetim-ui/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "framer-motion": "^12.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
